Kubernetes/jmaze-k8s-cilium/media/radarr/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  hostnames:
    - radarr.media.jmaz.tv
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: media # name of the gateway listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-ds1522
          port: 7878
          kind: Service
